--- a/index.html
+++ b/index.html
@@ -126,10 +126,7 @@
             <div data-type="MobileMenu" class="mobile-menu">
               <div class="navigation-nav1">
                 <div class="navigation-container">
-                  <img
-                    alt="Logo Getzke.id"
-                    src="public/playground_assets/logo-getzke-transparent-1500h.png"
-                  />
+                  <img alt="image" />
                   <div
                     data-type="CloseMobileMenu"
                     class="navigation-close-mobile-menu"
