Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     />
     <meta
       property="og:description"
-      content="Getzke : Brand Sepatu Lokal dengan Harga Masuk Akal dan model terbaru "
+      content="Getzke Sepatu Lokal Harga Masuk Akal dan model terbaru "
     />
     <meta property="og:title" content="Getzke Official Site" />
     <meta
       name="description"
-      content="Getzke : Brand Sepatu Lokal dengan Harga Masuk Akal dan model terbaru "
+      content="Getzke Sepatu Lokal Harga Masuk Akal dan model terbaru "
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta charset="utf-8" />
@@ -118,10 +118,18 @@
                 ></path>
               </svg>
             </div>
-            <div data-type="MobileMenu" class="mobile-menu">
+            <div
+              data-type="MobileMenu"
+              class="navigation-mobile-menu mobile-menu"
+            >
               <div class="navigation-nav1">
                 <div class="navigation-container">
-                  <img alt="image" />
+                  <img
+                    alt="image"
+                    src="public/playground_assets/logo-getzke-transparent-1500h.png"
+                    loading="lazy"
+                    class="navigation-image"
+                  />
                   <div
                     data-type="CloseMobileMenu"
                     class="navigation-close-mobile-menu"
@@ -159,9 +167,14 @@
                     <span>Akun Anda</span>
                   </a>
                 </nav>
-                <button class="button-secondary button button-md">
-                  <span>Get in touch</span>
-                </button>
+                <a
+                  href="https://getzke.id/store"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="navigation-register1 button-secondary button button-md"
+                >
+                  <span>STORE</span>
+                </a>
               </div>
             </div>
           </div>
@@ -321,25 +334,6 @@
                 id="customerservice"
                 class="home-tab-selector-cards-container"
               >
-                <div
-                  class="portofolio-card-speaker-card portofolio-card-root-class-name"
-                >
-                  <div class="portofolio-card-image-container">
-                    <img
-                      alt="Ikon Whatsapp"
-                      src="public/playground_assets/whatsapp.svg"
-                      class="portofolio-card-image"
-                    />
-                    <div class="portofolio-card-see-project-container">
-                      <button class="button-secondary-white button button-md">
-                        See project
-                      </button>
-                    </div>
-                  </div>
-                  <span class="portofolio-card-first-name">
-                    <span>Hubungi Customer Service</span>
-                  </span>
-                </div>
                 <a
                   href="https://api.whatsapp.com/send?phone=6281999307111"
                   target="_blank"
@@ -354,11 +348,6 @@
                         src="public/playground_assets/cs1-getzke-200h.jpg"
                         class="portofolio-card-image"
                       />
-                      <div class="portofolio-card-see-project-container">
-                        <button class="button-secondary-white button button-md">
-                          See project
-                        </button>
-                      </div>
                     </div>
                     <span class="portofolio-card-first-name">
                       <span>CS 1</span>
@@ -379,11 +368,6 @@
                         src="public/playground_assets/cs2-getzke-200h.jpg"
                         class="portofolio-card-image"
                       />
-                      <div class="portofolio-card-see-project-container">
-                        <button class="button-secondary-white button button-md">
-                          See project
-                        </button>
-                      </div>
                     </div>
                     <span class="portofolio-card-first-name">
                       <span>CS 2</span>
@@ -394,7 +378,7 @@
             </div>
           </div>
         </main>
-        <div class="section-container">
+        <div class="section-container home-footer">
           <div class="max-content-container">
             <div class="home-top-part">
               <div class="home-links-container">
