Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
             </div>
           </div>
         </main>
-        <div class="section-container home-footer">
-          <div class="max-content-container">
+        <div class="home-footer section-container">
+          <div class="max-content-container home-max-width2">
             <div class="home-top-part">
               <div class="home-links-container">
                 <div class="home-product-container">
@@ -426,13 +426,16 @@
               class="home-image11"
             />
             <span class="home-text18">
-              <span class="home-text19">Getzke All rights received @2022</span>
+              <span class="home-text19">Getzke All copyrights @2022</span>
               <span class="home-text20"></span>
-              <span class="home-text21">| Designed by</span>
-              <span class="home-text22">M.M. Billy</span>
             </span>
           </footer>
         </div>
+        <span class="home-text21">
+          <span class="home-text22">Developed by</span>
+          <span class="home-text23">KoncoWeb /</span>
+          <span class="home-text24">M.M. Billy</span>
+        </span>
       </div>
     </div>
     <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
