--- a/index.html
+++ b/index.html
@@ -82,33 +82,45 @@
                 class="navigation-links-nav navigation-links-root-class-name17"
               >
                 <a
-                  href="https://getzke.id"
+                  href="https://getzke.id/home/"
+                  target="_blank"
+                  rel="noreferrer noopener"
                   class="navigation-links-link navigation-Link"
                 >
                   <span>Home</span>
                 </a>
                 <a
-                  href="https://getzke.id/pesanan/"
+                  href="https://getzke.id/cart-2/"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="navigation-links-link1 navigation-Link"
                 >
-                  <span>Pesanan</span>
+                  <span>Keranjang</span>
                 </a>
                 <a
-                  href="https://getzke.id/my-account/edit-account/"
+                  href="https://getzke.id/account/"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="navigation-links-link2 navigation-Link"
                 >
                   <span>Akun Anda</span>
                 </a>
+                <a
+                  href="https://getzke.id/contact-us/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="navigation-links-link3 navigation-Link"
+                >
+                  <span>Kontak</span>
+                </a>
               </nav>
               <a
-                href="https://getzke.id/store"
+                href="https://getzke.id/shop-2/"
+                target="_blank"
+                rel="noreferrer noopener"
                 class="navigation-register button-secondary button button-md"
               >
-                <span>STORE</span>
+                <span>SHOP</span>
               </a>
             </div>
             <div data-type="BurgerMenu" class="navigation-burger-menu">
@@ -145,35 +157,45 @@
                   class="navigation-links-nav navigation-links-root-class-name18"
                 >
                   <a
-                    href="https://getzke.id"
+                    href="https://getzke.id/home/"
+                    target="_blank"
+                    rel="noreferrer noopener"
                     class="navigation-links-link navigation-Link"
                   >
                     <span>Home</span>
                   </a>
                   <a
-                    href="https://getzke.id/pesanan/"
+                    href="https://getzke.id/cart-2/"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="navigation-links-link1 navigation-Link"
                   >
-                    <span>Pesanan</span>
+                    <span>Keranjang</span>
                   </a>
                   <a
-                    href="https://getzke.id/my-account/edit-account/"
+                    href="https://getzke.id/account/"
                     target="_blank"
                     rel="noreferrer noopener"
                     class="navigation-links-link2 navigation-Link"
                   >
                     <span>Akun Anda</span>
                   </a>
+                  <a
+                    href="https://getzke.id/contact-us/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    class="navigation-links-link3 navigation-Link"
+                  >
+                    <span>Kontak</span>
+                  </a>
                 </nav>
                 <a
-                  href="https://getzke.id/store"
+                  href="https://getzke.id/shop-2/"
                   target="_blank"
                   rel="noreferrer noopener"
                   class="navigation-register1 button-secondary button button-md"
                 >
-                  <span>STORE</span>
+                  <span>SHOP</span>
                 </a>
               </div>
             </div>
@@ -183,20 +205,27 @@
           <div class="home-hero section-container">
             <div class="home-max-width max-content-container">
               <div class="home-gallery">
-                <div class="home-container01">
-                  <img
-                    alt="image"
-                    src="public/playground_assets/logo-getzke-transparent-200h.png"
-                    loading="lazy"
-                    class="home-image"
-                  />
-                </div>
+                <a
+                  href="https://getzke.id/shop-2/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="home-link"
+                >
+                  <div class="home-container01">
+                    <img
+                      alt="image"
+                      src="public/playground_assets/logo-getzke-transparent-200h.png"
+                      loading="lazy"
+                      class="home-image"
+                    />
+                  </div>
+                </a>
                 <div class="home-container02">
                   <a
                     href="https://shopee.co.id/getzkefootwear"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link"
+                    class="home-link01"
                   >
                     <div class="home-container03">
                       <img
@@ -210,7 +239,7 @@
                     href="https://www.tokopedia.com/getzke-id"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link01"
+                    class="home-link02"
                   >
                     <div class="home-container04">
                       <img
@@ -224,7 +253,7 @@
                     href="https://www.lazada.co.id/shop/getzke"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link02"
+                    class="home-link03"
                   >
                     <div class="home-container05">
                       <img
@@ -238,7 +267,7 @@
                     href="https://www.blibli.com/merchant/getzke-official-store/GEO-70047"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link03"
+                    class="home-link04"
                   >
                     <div class="home-container06">
                       <img
@@ -254,7 +283,7 @@
                     href="https://www.zalora.co.id/store/getzke-official"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link04"
+                    class="home-link05"
                   >
                     <div class="home-container08">
                       <img
@@ -268,7 +297,7 @@
                     href="https://shoesmart.co.id/products?search=getzke"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link05"
+                    class="home-link06"
                   >
                     <div class="home-container09">
                       <img
@@ -282,7 +311,7 @@
                     href="https://www.instagram.com/getzke/"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link06"
+                    class="home-link07"
                   >
                     <div class="home-container10">
                       <img
@@ -296,7 +325,7 @@
                     href="https://www.tiktok.com/@getzke.id?_d=secCgYIASAHKAESPgo8Dejd6Y1lOgKjgYiSEyLXoDR3H2Z7EJxGwSu%2Bk6Cb2ztG9m%2B7lZcm1Q7qft%2BkxEZu1%2B83H5UwXTekkANGGgA%3D&amp;_r=1&amp;language=id&amp;sec_uid=MS4wLjABAAAAiBC7hpplMQTOTKNU_5hcLtgFKrS-eUSqU3FRXShwLd5HjoyE9qeBQYz47MEvWnfk&amp;sec_user_id=MS4wLjABAAAA-044iWtK5TUQsng65Pc0OMTrvDNJUr0vxAaE-uZ4ambe0DMMg3cMPb2ELKFStWl2&amp;share_app_id=1180&amp;share_author_id=6869375106500035586&amp;share_link_id=8930b0da-225c-44dd-9836-e29f68aa1b20&amp;source=h5_t&amp;timestamp=1653649460&amp;u_code=dhdm6ei41g3mmf&amp;ugbiz_name=Account&amp;user_id=6938331195777729538&amp;utm_campaign=client_share&amp;utm_medium=android&amp;utm_source=copy"
                     target="_blank"
                     rel="noreferrer noopener"
-                    class="home-link07"
+                    class="home-link08"
                   >
                     <div class="home-container11">
                       <img
@@ -315,7 +344,7 @@
                       class="home-image09"
                     />
                   </div>
-                  <a href="#csbox" class="home-link08">
+                  <a href="#csbox" class="home-link09">
                     <div class="home-container14">
                       <img
                         alt="image"
@@ -420,22 +449,43 @@
           </div>
           <div class="home-separator"></div>
           <footer class="home-max-width3 max-content-container">
-            <img
-              alt="image"
-              src="public/playground_assets/logo-getzke-transparent-200h.png"
-              class="home-image11"
-            />
-            <span class="home-text18">
-              <span class="home-text19">Getzke All copyrights @2022</span>
-              <span class="home-text20"></span>
-            </span>
+            <div class="home-container15">
+              <img
+                alt="image"
+                src="public/playground_assets/logo-getzke-transparent-200h.png"
+                class="home-image11"
+              />
+              <span class="home-text18">
+                <span class="home-text19">Getzke All copyrights @2022</span>
+                <span class="home-text20"></span>
+              </span>
+            </div>
+            <div class="home-container16">
+              <a
+                href="https://getzke.id/promo/"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="home-link12"
+              >
+                <span>Promo</span>
+                <span></span>
+              </a>
+              <a
+                href="https://getzke.id/pengembalian_dana_dan_barang/"
+                target="_blank"
+                rel="noreferrer noopener"
+                class="home-link13"
+              >
+                <span>Kebijakan Pengembalian Dana dan Barang</span>
+              </a>
+            </div>
           </footer>
+          <span class="home-text24">
+            <span class="home-text25">Developed by</span>
+            <span class="home-text26">KoncoWeb /</span>
+            <span class="home-text27">M.M. Billy</span>
+          </span>
         </div>
-        <span class="home-text21">
-          <span class="home-text22">Developed by</span>
-          <span class="home-text23">KoncoWeb /</span>
-          <span class="home-text24">M.M. Billy</span>
-        </span>
       </div>
     </div>
     <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
